Blurry display fix

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 	max-width: calc(100vw - 1px);
 	max-height: calc(100vh - 2px);
 	border: 1px solid rgb(200, 200, 200);
+	image-rendering: pixelated;
 }
 
 @media all and (max-height: 700px) {
